--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="container">
 	<div class="left">
-		<img src="images/s1.png">
+		<img src="s1.png">
 	</div>
 
 
@@ -46,7 +46,7 @@
 			upto 80% Discount!!!
 		</p>
 		<button>Shop</button><br>
-		<img src="images/icon.png">
+		<img src="icon.png">
 	</div>
 </div>
 </header>
