--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
 	<h1>Top reviewed products</h1>
 	<div class="wrapper">
 	<div class="box3">
-		<img src="images/s1.png">
+		<img src="s1.png">
 		<div class="price">Price: 350Rs</div>
 	</div>
 		<div>
-		<img src="images/s2.jpg">
+		<img src="s2.jpg">
 		<div class="price">Price: 450Rs</div>
 	</div>
 		<div>
-		<img src="images/s3.jpg">
+		<img src="s3.jpg">
 		<div class="price">Price: 250Rs</div>
 	</div>
 		<div>
-		<img src="images/s4.jpg">
+		<img src="s4.jpg">
 		<div class="price">Price: 320Rs</div>
 	</div>
 		<div>
-		<img src="images/s1.png">
+		<img src="s1.png">
 		<div class="price">Price: 410RS</div>
 	</div>
 </div>
@@ -80,27 +80,27 @@
 <section id="man">
 	<div class="man-row">
 		<div class="man-box">
-			<img src="images/s5.jpg">
+			<img src="s5.jpg">
 				<h2>Nike Ferr TR<br>329.99Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="images/s2.jpg">
+			<img src="s2.jpg">
 				<h2>Nike Ferr TR<br>429.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="images/s5.jpg">
+			<img src="s5.jpg">
 				<h2>Nike Ferr TR<br>539.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="images/s2.jpg">
+			<img src="s2.jpg">
 				<h2>Nike Ferr TR<br>570.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="images/s5.jpg">
+			<img src="s5.jpg">
 				<h2>Nike Ferr TR<br>580.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
@@ -113,22 +113,22 @@
 
 	<div class="man-row">
 		<div class="man-box">
-			<img src="images/s2.jpg">
+			<img src="s2.jpg">
 				<h2>Nike Ferr TR<br>329.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="images/s3.jpg">
+			<img src="s3.jpg">
 				<h2>Nike Ferr TR<br>429.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="images/s5.jpg">
+			<img src="s5.jpg">
 				<h2>Nike Ferr TR<br>529.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="images/s7.jpg">
+			<img src="s7.jpg">
 				<h2>Nike Ferr TR<br>549.00Rs</h2>
 			<h3>Add to cart </h3>
 		</div>
@@ -140,7 +140,7 @@
 
 <section id="footer">
 	<h2>Developed by Ravikant Rajbhar</h2>
-	<img src="images/icon.png">
+	<img src="icon.png">
 </section>
 
 
