--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="logo">Globalbazar</div>
 		<div class="menu">
 			<a href="#Home">Home</a>
-			<a href="#Clothes">Clothes</a>
+			<a href="clothes.html">Clothes</a>
 			<a href="#Electronics">Electronics</a>
 			<a href="#Sports">Sports</a>
 			<a href="#Home & Living">Home & Living</a>
